--- a/mobileApp/package.json
+++ b/mobileApp/package.json
@@ -19,6 +19,15 @@
     "@angular/forms": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@capacitor/android": "3.6.0",
+    "@capacitor/app": "1.1.1",
+    "@capacitor/core": "3.6.0",
+    "@capacitor/device": "1.1.2",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.6.0",
+    "@capacitor/keyboard": "1.2.3",
+    "@capacitor/splash-screen": "1.2.2",
+    "@capacitor/status-bar": "1.0.8",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/http": "^5.36.0",
     "@ionic-native/splash-screen": "4.20.0",
@@ -31,14 +40,26 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
+    "@capacitor/cli": "3.6.0",
+    "@ionic/app-scripts": "3.2.3",
+    "cordova-android": "^10.1.2",
     "cordova-plugin-advanced-http": "^3.3.1",
-    "typescript": "2.6.2"
+    "cordova-plugin-file": "^7.0.0",
+    "cordova-res": "0.15.4",
+    "typescript": "2.7.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {}
-    }
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
